add external fonts to theme JavaFX doesn't have the usual CSS fallback system, which means you can't specify a proper font stack (See: https://docs.oracle.com/javafx/2/api/javafx/scene/doc-files/cssref.html#introlimitations). While you can specify 'sans' and 'monospace', it might be better for the sake of consistency to just use your own font instead. Adobe's excellent Source Pro family of fonts will do nicely here.

--- a/src/seedu/addressbook/ui/DarkTheme.css
+++ b/src/seedu/addressbook/ui/DarkTheme.css
@@ -1,8 +1,66 @@
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: normal;
+    font-style: normal;
+    src: url('fonts/SourceCodePro-Regular.otf');
+}
 
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: bold;
+    font-style: normal;
+    src: url('fonts/SourceCodePro-Bold.otf');
+}
+
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: normal;
+    font-style: italic;
+    src: url('fonts/SourceCodePro-It.otf');
+}
+
+
+@font-face {
+    font-family: 'Source Code Pro';
+    font-weight: bold;
+    font-style: italic;
+    src: url('fonts/SourceCodePro-BoldIt.otf');
+}
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    font-weight: normal;
+    font-style: normal;
+    src: url('fonts/SourceSansPro-Regular.otf');
+}
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    font-weight: bold;
+    font-style: normal;
+    src: url('fonts/SourceSansPro-Bold.otf');
+}
+
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    font-weight: normal;
+    font-style: italic;
+    src: url('fonts/SourceSansPro-It.otf');
+}
+
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    font-weight: bold;
+    font-style: italic;
+    src: url('fonts/SourceSansPro-BoldIt.otf');
+}
 
 .text-field {
     -fx-font-size: 12pt;
-    -fx-font-family: "Consolas";
+    -fx-font-family: 'Source Code Pro';
     -fx-font-weight: bold;
     -fx-text-fill: yellow;
     -fx-control-inner-background: derive(#1d1d1d,20%);
@@ -11,7 +69,7 @@
 .text-area {
     -fx-background-color: black;
     -fx-control-inner-background: black;
-    -fx-font-family: "Segoe UI Semibold";
-    -fx-font-size: 10pt;
+    -fx-font-family: "Source Sans Pro";
+    -fx-font-size: 11pt;
     -fx-padding: 5 5 5 5;
 }
