--- a/src/seedu/addressbook/ui/mainwindow.fxml
+++ b/src/seedu/addressbook/ui/mainwindow.fxml
@@ -4,8 +4,8 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox stylesheets="@/seedu/addressbook/ui/DarkTheme.css" alignment="center" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="seedu.addressbook.ui.MainWindow">
+<VBox alignment="center" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="seedu.addressbook.ui.MainWindow" fx:id="container">
 
     <children>
 
